@@ -69,6 +69,10 @@ updated_data = data.copy()
 updated_data['first_name'] = 'John'
 updated_data['last_name'] = 'Doe'
 
+# Patch a resource with primary key '1'
+# PATCH http://localhost:8000/api/v1/users/1/
+response = api.users.patch(1, dict(first_name='Johnny'))
+    
 # PUT http://localhost:8000/api/v1/users/1/
 response = api.users.put(1, updated_data)
 
